--- a/webfrontend/package.json
+++ b/webfrontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
@@ -22,7 +23,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "vue-cli-plugin-fontawesome": "~0.3.1"
   },
   "eslintConfig": {
     "root": true,
