--- a/webfrontend/package.json
+++ b/webfrontend/package.json
@@ -16,7 +16,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
