--- a/webfrontend/package.json
+++ b/webfrontend/package.json
@@ -12,12 +12,17 @@
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.1",
+    "emailjs-com": "^3.2.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "qrcode": "^1.5.0",
+    "speakeasy": "^2.0.0",
+    "url": "^0.11.0",
+    "util": "^0.12.4",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
-
     "vuex": "^4.0.2"
   },
   "devDependencies": {
