--- a/webfrontend/package.json
+++ b/webfrontend/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.1",
+    "email-js": "^2.0.2",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
