--- a/webfrontend/package.json
+++ b/webfrontend/package.json
@@ -15,6 +15,7 @@
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.0.1",
     "email-js": "^2.0.2",
+    "emailjs": "^4.0.0",
     "emailjs-com": "^3.2.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
