--- a/webfrontend/package.json
+++ b/webfrontend/package.json
@@ -19,8 +19,10 @@
     "emailjs-com": "^3.2.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mkcert": "^1.5.0",
     "qrcode": "^1.5.0",
     "speakeasy": "^2.0.0",
+    "streamsaver": "^2.0.6",
     "url": "^0.11.0",
     "util": "^0.12.4",
     "vue": "^3.2.13",
